--- a/MobileApp/app/src/main/AndroidManifest.xml
+++ b/MobileApp/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Load_Logo"></activity>
+        <activity android:name=".cadastro"></activity>
+        <activity android:name=".Load_Logo" />
         <activity
             android:name=".ui.login.Login_Restaurante"
             android:label="@string/title_activity_login__restaurante" />
